# MKSC-RL

./: .env  README.md  enjoy_one_episode.py  main.py  mksc.lua  mksc.py  mksc.yml  pyproject.toml
BizHawk-2.11-win-x64/Tools/: Mario Kart - Super Circuit (Europe).wch
patches/: gymbizhawk-keep-string-info.patch
